[package]
name = "bridge-wrapper"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lock-and-mint + burn-and-release cross-chain wrapper for bridging EVM, Solana, and other assets onto Stellar."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
